x overlap corrected

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ ul li span {
     top: 5px;
     width: 40px;
     height: 40px;
+    margin-right: -20px;
     color: #555;
     line-height: 40px;
     text-align: center;
